v3-adding changes to push

--- a/MyResume.html
+++ b/MyResume.html
@@ -24,7 +24,7 @@
       <section>
         <h2>Skills</h2>
         <ul>
-          <li>Programming: Python, JavaScript, HTML/CSS, Java</li>
+          <li>Programming: C, C++, Python, JavaScript, HTML/CSS, Java</li>
           <li>Frameworks: React, Node.js, Django</li>
           <li>Tools: Git, Docker, Kubernetes, Jenkins</li>
           <li>Cloud: AWS, Azure</li>
